Added Monitor code; created .gitignore file

--- a/PadmeDAQ/Makefile
+++ b/PadmeDAQ/Makefile
@@ -6,7 +6,7 @@
 #
 #########################################################################
 
-EXE =	PadmeDAQ
+EXE =	PadmeDAQ.exe
 
 SDIR	= src
 ODIR	= obj
