New code in Monitor, use PADME in Makefile

--- a/Level1/Makefile
+++ b/Level1/Makefile
@@ -21,7 +21,7 @@ ROOTLIBS     := $(shell $(ROOTCONFIG) --libs)
 ROOTGLIBS    := $(shell $(ROOTCONFIG) --glibs)
 
 # Directory where the PadmeRoot package is installed
-PADMEROOTDIR := ../PadmeRoot
+PADMEROOTDIR := $(PADME)/PadmeRoot
 
 # Define c++ compiler and flags
 CXX = g++
