Added event handling structure to Monitor

--- a/TestBeam/Makefile
+++ b/TestBeam/Makefile
@@ -1,16 +1,16 @@
 ########################################################################
 #
-# Compile PadmeMerge code
+# Compile TestBeam code
 #
 # Author Emanuele Leonardi <emanuele.leonardi@roma1.infn.it>
 #
 #########################################################################
 
 # Define directories for different file types
-SDIR	= src
-ODIR	= obj
-DDIR	= deps
-IDIR	= include
+SDIR = src
+ODIR = obj
+DDIR = deps
+IDIR = include
 
 # Define root environment
 ROOTCONFIG   := root-config
@@ -19,7 +19,7 @@ ROOTINCDIR   := $(shell $(ROOTCONFIG) --incdir)
 ROOTLDFLAGS  := $(shell $(ROOTCONFIG) --ldflags)
 ROOTLIBS     := $(shell $(ROOTCONFIG) --libs)
 ROOTGLIBS    := $(shell $(ROOTCONFIG) --glibs)
-ROOTEVELIBS    := $(shell $(ROOTCONFIG) --evelibs)
+ROOTEVELIBS  := $(shell $(ROOTCONFIG) --evelibs)
 
 # Directory where the PadmeRoot package is installed
 PADMEROOTDIR := $(PADME)/PadmeRoot
@@ -37,10 +37,16 @@ LIBS	= -L$(PADMEROOTDIR)/lib -lPadmeRoot -lsqlite3
 LDFLAGS = -O4 $(ROOTLDFLAGS) $(ROOTEVELIBS) $(LIBS)
 
 # Get list of files to process
+
 SOURCES  := $(wildcard $(SDIR)/*.cc)
 INCLUDES := $(wildcard $(IDIR)/*.hh)
-OBJECTS  := $(addprefix $(ODIR)/,$(notdir $(SOURCES:.cc=.o)))
 DEPS     := $(addprefix $(DDIR)/,$(notdir $(SOURCES:.cc=.ccd)))
+OBJECTS  := $(addprefix $(ODIR)/,$(notdir $(SOURCES:.cc=.o)))
+
+LINKDEFS := $(wildcard *LinkDef.hh)
+SRCDICTS := $(LINKDEFS:LinkDef.hh=Dict.cc)
+INCDICTS := $(SRCDICTS:.cc=.h)
+OBJDICTS := $(SRCDICTS:.cc=.o)
 
 # Get list of main programs to compile
 EXESRC            := $(wildcard *.cpp)
@@ -49,10 +55,10 @@ DEPEXE		  := $(EXESRC:.cpp=.d)
 
 #########################################################################
 
-all: $(EXECUTABLES)
+all : $(EXECUTABLES)
 
-%.exe : %.cpp $(DEPS) $(OBJECTS) %.d   
-	${CXX} $(CXXFLAGS) $< $(OBJECTS) $(LDFLAGS) -o $@ 
+%.exe : %.cpp $(DEPS) $(OBJECTS) $(OBJDICTS) %.d   
+	${CXX} $(CXXFLAGS) $< $(OBJECTS) $(OBJDICTS) $(LDFLAGS) -o $@ 
 
 $(ODIR)/%.o : $(SDIR)/%.cc $(DDIR)/%.ccd
 	$(CXX) $(CXXFLAGS) -c $< -o $@
@@ -60,21 +66,31 @@ $(ODIR)/%.o : $(SDIR)/%.cc $(DDIR)/%.ccd
 $(DDIR)/%.ccd : $(SDIR)/%.cc
 	$(DEPEND) $(CPPFLAGS) -MT $(addprefix $(ODIR)/,$(notdir $(<:.cc=.o))) $< > $@
 
+%Dict.cc : $(INCLUDES) %LinkDef.hh
+	@echo "Generating dictionary $@..."
+	rootcint -f $@ -c $(filter-out -I/usr/include,$(CPPFLAGS)) $^
+
+%Dict.o : %Dict.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
 %.d : 	%.cpp
 	$(DEPEND) $(CPPFLAGS) -MT $(notdir $(<:.cpp=.exe)) $< > $@
 
-.PHONY:	all clean cleanall try
+.SECONDARY : $(SRCDICTS) $(OBJDICTS)
 
-clean:
+.PHONY :	all clean cleanall try
+
+clean :
 	@echo Cleaning object files...
-	rm -f $(ODIR)/*.o
+	rm -f $(OBJECTS) $(OBJDICTS)
 
-cleanall:
+cleanall :
 	@echo Cleaning all...
-	rm -f $(ODIR)/*.o
+	rm -f $(SRCDICTS) $(INCDICTS) $(OBJDICTS)
+	rm -f $(OBJECTS)
 	rm -f *.exe
 
-try:
+try :
 	@echo Current make parameters:
 	@echo EXECUTABLES = $(EXECUTABLES)
 	@echo CXXFLAGS = $(CXXFLAGS)
@@ -83,8 +99,12 @@ try:
 	@echo LDFLAGS = $(LDFLAGS)
 	@echo SOURCES = $(SOURCES)
 	@echo INCLUDES = $(INCLUDES)
-	@echo OBJECTS = $(OBJECTS)
 	@echo DEPS = $(DEPS)
+	@echo OBJECTS = $(OBJECTS)
+	@echo LINKDEFS = $(LINKDEFS)
+	@echo SRCDICTS = $(SRCDICTS)
+	@echo INCDICTS = $(INCDICTS)
+	@echo OBJDICTS = $(OBJDICTS)
 	@echo EXESRC = $(EXESRC)
 	@echo DEPEXE = $(DEPEXE)
 	@echo ROOTCFLAGS = $(ROOTCFLAGS)
