--- a/PadmeMC/GNUmakefile
+++ b/PadmeMC/GNUmakefile
@@ -11,8 +11,7 @@
 name := PADMEMC
 G4TARGET := $(name)
 G4EXLIB  := true
-#SUBDIRS  := ECAL Target SAC MCBase
-SUBDIRS  := ECal
+SUBDIRS  := ECal Target SAC
 ALLTARGETDIRS := $(SUBDIRS)
 
 # Directory where the PadmeRoot package is installed
