Define PadmeReconstruction class and associated virtual classes

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -5,22 +5,24 @@ NAME := PadmeReco
 #SUBDIRS := Target EVeto PVeto HEPVeto TPix ECal SAC
 SUBDIRS := 
 #ALLTARGETDIRS := $(SUBDIRS) RecoBase EventDisplay Service
-ALLTARGETDIRS := $(SUBDIRS)
+ALLTARGETDIRS := $(SUBDIRS) RecoBase
 
 STATIC := -static
 
 ISSLC6 = $(shell cat /etc/redhat-release |grep -ic "Scientific Linux CERN SLC release 6")
 
 #CPPFLAGS += $(addprefix -I,$(addsuffix /include,$(SUBDIRS)))
-#CPPFLAGS += -IEventDisplay/include -IService/include -IRecoBase/include -g
+#CPPFLAGS += -IEventDisplay/include -IService/include
+CPPFLAGS += -IRecoBase/include -g
 
 include ./config/global.gmk
 
 # Define libraries used for the creation of the final executable
-#LIBS += -Llib -lPadmeReco$(STATIC) 
+LIBS += -Llib -lPadmeReco$(STATIC) 
 #LIBS += $(addprefix -L,$(addsuffix /lib,$(SUBDIRS))) \
 #   $(addprefix -l,$(addsuffix Reco$(STATIC),$(SUBDIRS)))
-#LIBS += -LService/lib -lService$(STATIC) -LRecoBase/lib -lRecoBase$(STATIC)
+#LIBS += -LService/lib -lService$(STATIC)
+LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
 LIBS += -L/usr/lib64/mysql -lmysqlclient
 
@@ -37,7 +39,7 @@ all: PadmeReco
 
 PadmeReco: PadmeReco.cc makesub
 	@echo "Compiling $< ..."
-	@$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
+	$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
 
 #PadmeEventDisplay: PadmeEventDisplay.cc makesub
 #	@echo "Compiling $< ..."
