--- a/RunControl/setup/TB2015/board_01.cfg
+++ b/RunControl/setup/TB2015/board_01.cfg
@@ -1,4 +1,15 @@
-startdaq_mode 1
-#trigger_iolevel NIM
-#group_enable_mask 0x1
-#channel_enable_mask 0x000000ff
+startdaq_mode 0
+
+group_enable_mask 0xf
+channel_enable_mask 0xfff3ceae
+
+offset_global 0x8F00
+offset_ch 21 0x5600
+
+#post_trigger_size 0
+#drs4_sampfreq 1
+#drs4corr_enable 1
+
+file_max_events 500
+
+zero_suppression 0
