Add check for G4 version to use the appropriate includes Update the 9.6.3 "old" physics list to call the ConstructNuclearProcess on request     (the call seem to be lost between the submissions...)

--- a/PadmeMC/GNUmakefile
+++ b/PadmeMC/GNUmakefile
@@ -30,7 +30,11 @@ ROOTLIBS     := $(shell $(ROOTCONFIG) --libs)
 include $(G4INSTALL)/config/architecture.gmk
 
 G4VERSION = $(shell dirname $(G4INSTALL) | sed s:\/.\*\/:"": )
-DEFINES += -D G4VERSION=$(G4VERSION)
+G4MAJORVERSION = $(shell dirname $(G4INSTALL) | sed -e 's:/.*/::' -e 's:\-: :' -e 's:\.: :g' | cut -d" " -f2 )
+G4MINORVERSION = $(shell dirname $(G4INSTALL) | sed -e 's:/.*/::' -e 's:\-: :' -e 's:\.: :g' | cut -d" " -f3 )
+
+
+DEFINES += -D G4VERSION=$(G4VERSION) -D G4MAJORVERSION=$(G4MAJORVERSION) -D G4MINORVERSION=$(G4MINORVERSION) 
 
 
 CPPFLAGS += -I$(PADMEROOTDIR)/include $(ROOTCFLAGS) -fPIC $(DEFINES) 
