Make it compiling
Put std:: in front of some cout, cerr...

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,24 @@
 run_*
 PersistencyDict.cc
 PersistencyDict.h
+.*.swp
+
+
+PadmeReco/ECal/lib/
+PadmeReco/ECal/tmp/
+PadmeReco/EVeto/lib/
+PadmeReco/EVeto/tmp/
+PadmeReco/HEPVeto/lib/
+PadmeReco/HEPVeto/tmp/
+PadmeReco/PVeto/lib/
+PadmeReco/PVeto/tmp/
+PadmeReco/PadmeReco
+PadmeReco/RecoBase/lib/
+PadmeReco/RecoBase/tmp/
+PadmeReco/SAC/lib/
+PadmeReco/SAC/tmp/
+PadmeReco/Target/lib/
+PadmeReco/Target/tmp/
+PadmeReco/lib/
+PadmeReco/tmp/
+
