Added Padme Universe
- detUniverse
  Singleton class who owns all the configuration and relations between
  the Detectors, Digitizers and ROChannels
- Minor fixes of utlConfigParser
- detPadmeElement
  Everything inherits from this class. Currently it provides
  only with string name etc...
- Template classes for
  - detVDetector
  - detVDetectorSystem
  - detVDigitizer
  - detVDigitizerChannel
  - detVRODevice

--- a/PadmeReco/config/PadmeReconstruction.conf
+++ b/PadmeReco/config/PadmeReconstruction.conf
@@ -7,8 +7,9 @@ DET_RODEV        .
 DIGI_RODEV       .
 
 [SUBSYSTEMS]
-EVeto .
-Calorimeter .
+EVeto1       eEVeto
+Calorimeter_ eECAL
+PVeto_       ePVeto
 
 [EVeto]
 y1  EVetoScint 1  1
@@ -34,8 +35,8 @@ x8  EVetoScint 2  8
 
 ### RO DEVICES
 [RO_DEVICES]
-pmt_H9500_1 h9500
-PhotoOR     Photonis
+pmt_H9500_1 eHamamatsuH9500
+PhotoOR     ePhotonis
 
 
 [PhotoOR_CONF]
