--- a/PadmeReco/config/PadmeReconstruction.conf
+++ b/PadmeReco/config/PadmeReconstruction.conf
@@ -6,30 +6,41 @@ SUBSYSTEMS       .
 DET_RODEV        .
 DIGI_RODEV       .
 
+[EXTERNALS] # not yet supported
+#EVeto1 <filename>
+
 [SUBSYSTEMS]
 EVeto1       eEVeto
-Calorimeter_ eECAL
-PVeto_       ePVeto
+#Calorimeter_ eECAL
+#PVeto_       ePVeto
 
-[EVeto]
-y1  EVetoScint 1  1
-y2  EVetoScint 1  2
-y3  EVetoScint 1  3
-y4  EVetoScint 1  4
-y5  EVetoScint 1  5
-y6  EVetoScint 1  6
-y7  EVetoScint 1  7
-y8  EVetoScint 1  8
-x1  EVetoScint 2  1
-x2  EVetoScint 2  2
-x3  EVetoScint 2  3
-x4  EVetoScint 2  4
-x5  EVetoScint 2  5
-x6  EVetoScint 2  6
-x7  EVetoScint 2  7
-x8  EVetoScint 2  8
+[EVeto1.Layers]
+evetoLayerX 1
+#evetoLayerXx 1 2
+#evetoLayerXxx 1 2 2
+evetoLayerY 2
 
+[EVeto1.Detectors]
+y1  eEVetoScintillatorBar 1  1
+y2  eEVetoScintillatorBar 1  2
+y3  eEVetoScintillatorBar 1  3
+y4  eEVetoScintillatorBar 1  4
+y5  eEVetoScintillatorBar 1  5
+y6  eEVetoScintillatorBar 1  6
+y7  eEVetoScintillatorBar 1  7
+y8  eEVetoScintillatorBar 1  8
+x1  eEVetoScintillatorBar 2  1
+x2  eEVetoScintillatorBar 2  2
+x3  eEVetoScintillatorBar 2  3
+x4  eEVetoScintillatorBar 2  4
+x5  eEVetoScintillatorBar 2  5
+x6  eEVetoScintillatorBar 2  6
+x7  eEVetoScintillatorBar 2  7
+x8  eEVetoScintillatorBar 2  8
 
+[Calorimeter_Detectors]
+
+[PVeto_Detecotrs]
 
 
 
