--- a/PadmeReco/config/PadmeReconstruction.conf
+++ b/PadmeReco/config/PadmeReconstruction.conf
@@ -21,22 +21,22 @@ evetoLayerX 1
 evetoLayerY 2
 
 [EVeto1.Detectors]
-y1  eEVetoScintillatorBar 1  1
-y2  eEVetoScintillatorBar 1  2
-y3  eEVetoScintillatorBar 1  3
-y4  eEVetoScintillatorBar 1  4
-y5  eEVetoScintillatorBar 1  5
-y6  eEVetoScintillatorBar 1  6
-y7  eEVetoScintillatorBar 1  7
-y8  eEVetoScintillatorBar 1  8
-x1  eEVetoScintillatorBar 2  1
-x2  eEVetoScintillatorBar 2  2
-x3  eEVetoScintillatorBar 2  3
-x4  eEVetoScintillatorBar 2  4
-x5  eEVetoScintillatorBar 2  5
-x6  eEVetoScintillatorBar 2  6
-x7  eEVetoScintillatorBar 2  7
-x8  eEVetoScintillatorBar 2  8
+EVetoDetecotor_y1  eEVetoScintillatorBar 1  1
+EVetoDetecotor_y2  eEVetoScintillatorBar 1  2
+EVetoDetecotor_y3  eEVetoScintillatorBar 1  3
+EVetoDetecotor_y4  eEVetoScintillatorBar 1  4
+EVetoDetecotor_y5  eEVetoScintillatorBar 1  5
+EVetoDetecotor_y6  eEVetoScintillatorBar 1  6
+EVetoDetecotor_y7  eEVetoScintillatorBar 1  7
+EVetoDetecotor_y8  eEVetoScintillatorBar 1  8
+EVetoDetecotor_x1  eEVetoScintillatorBar 2  1
+EVetoDetecotor_x2  eEVetoScintillatorBar 2  2
+EVetoDetecotor_x3  eEVetoScintillatorBar 2  3
+EVetoDetecotor_x4  eEVetoScintillatorBar 2  4
+EVetoDetecotor_x5  eEVetoScintillatorBar 2  5
+EVetoDetecotor_x6  eEVetoScintillatorBar 2  6
+EVetoDetecotor_x7  eEVetoScintillatorBar 2  7
+EVetoDetecotor_x8  eEVetoScintillatorBar 2  8
 
 [Calorimeter_Detectors]
 
