--- a/PadmeReco/config/PadmeReconstruction.conf
+++ b/PadmeReco/config/PadmeReconstruction.conf
@@ -15,28 +15,27 @@ EVeto1       eEVeto
 #PVeto_       ePVeto
 
 [EVeto1.Layers]
-evetoLayerX 1
-#evetoLayerXx 1 2
-#evetoLayerXxx 1 2 2
-evetoLayerY 2
+#ParentLayer contents
+EVeto1.TopLayer evetoLayerX evetoLayerY evetoLayerZ
+evetoLayerZ evetoLayerZ1 evetoLayerZ2 evetoLayerZ3
 
 [EVeto1.Detectors]
-EVetoDetecotor_y1  eEVetoScintillatorBar 1  1
-EVetoDetecotor_y2  eEVetoScintillatorBar 1  2
-EVetoDetecotor_y3  eEVetoScintillatorBar 1  3
-EVetoDetecotor_y4  eEVetoScintillatorBar 1  4
-EVetoDetecotor_y5  eEVetoScintillatorBar 1  5
-EVetoDetecotor_y6  eEVetoScintillatorBar 1  6
-EVetoDetecotor_y7  eEVetoScintillatorBar 1  7
-EVetoDetecotor_y8  eEVetoScintillatorBar 1  8
-EVetoDetecotor_x1  eEVetoScintillatorBar 2  1
-EVetoDetecotor_x2  eEVetoScintillatorBar 2  2
-EVetoDetecotor_x3  eEVetoScintillatorBar 2  3
-EVetoDetecotor_x4  eEVetoScintillatorBar 2  4
-EVetoDetecotor_x5  eEVetoScintillatorBar 2  5
-EVetoDetecotor_x6  eEVetoScintillatorBar 2  6
-EVetoDetecotor_x7  eEVetoScintillatorBar 2  7
-EVetoDetecotor_x8  eEVetoScintillatorBar 2  8
+EVetoDetecotor_y1  eEVetoScintillatorBar evetoLayerX  1
+EVetoDetecotor_y2  eEVetoScintillatorBar evetoLayerX  2
+EVetoDetecotor_y3  eEVetoScintillatorBar evetoLayerX  3
+EVetoDetecotor_y4  eEVetoScintillatorBar evetoLayerX  4
+EVetoDetecotor_y5  eEVetoScintillatorBar evetoLayerX  5
+EVetoDetecotor_y6  eEVetoScintillatorBar evetoLayerX  6
+EVetoDetecotor_y7  eEVetoScintillatorBar evetoLayerX  7
+EVetoDetecotor_y8  eEVetoScintillatorBar evetoLayerX  8
+EVetoDetecotor_x1  eEVetoScintillatorBar evetoLayerY  1
+EVetoDetecotor_x2  eEVetoScintillatorBar evetoLayerY  2
+EVetoDetecotor_x3  eEVetoScintillatorBar evetoLayerY  3
+EVetoDetecotor_x4  eEVetoScintillatorBar evetoLayerY  4
+EVetoDetecotor_x5  eEVetoScintillatorBar evetoLayerY  5
+EVetoDetecotor_x6  eEVetoScintillatorBar evetoLayerY  6
+EVetoDetecotor_x7  eEVetoScintillatorBar evetoLayerY  7
+EVetoDetecotor_x8  eEVetoScintillatorBar evetoLayerY  8
 
 [Calorimeter_Detectors]
 
