--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -2,8 +2,7 @@
 
 NAME := PadmeReco
 
-#SUBDIRS := Target EVeto PVeto HEPVeto TPix ECal SAC
-SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC
+SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC TPix
 #ALLTARGETDIRS := $(SUBDIRS) RecoBase EventDisplay Service
 ALLTARGETDIRS := $(SUBDIRS) RecoBase
 
