First attempt at EventDisplay. Does not work as GDML->ROOT fails on tessellated solids: must use root6?

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -3,7 +3,7 @@
 NAME := PadmeReco
 
 SUBDIRS := Target EVeto PVeto HEPVeto ECal SAC TPix
-#ALLTARGETDIRS := $(SUBDIRS) RecoBase EventDisplay Service
+#ALLTARGETDIRS := $(SUBDIRS) RecoBase EventDisplay
 ALLTARGETDIRS := $(SUBDIRS) RecoBase
 
 STATIC := -static
@@ -11,7 +11,7 @@ STATIC := -static
 ISSLC6 = $(shell cat /etc/redhat-release |grep -ic "Scientific Linux CERN SLC release 6")
 
 CPPFLAGS += $(addprefix -I,$(addsuffix /include,$(SUBDIRS)))
-#CPPFLAGS += -IEventDisplay/include -IService/include
+#CPPFLAGS += -IEventDisplay/include -IRecoBase/include -g
 CPPFLAGS += -IRecoBase/include -g
 
 include ./config/global.gmk
@@ -19,30 +19,26 @@ include ./config/global.gmk
 # Define libraries used for the creation of the final executable
 LIBS += -Llib -lPadmeReco$(STATIC) 
 LIBS += $(addprefix -L,$(addsuffix /lib,$(SUBDIRS))) $(addprefix -l,$(addsuffix Reco$(STATIC),$(SUBDIRS)))
-#LIBS += -LService/lib -lService$(STATIC)
 LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
 LIBS += -L/usr/lib64/mysql -lmysqlclient
 
 #EXTRALIBS += -LEventDisplay/lib -lEventDisplay$(STATIC) -lEve -lGeom -lRGL -lFTGL -lGui -lGed -lTreePlayer -lEG 
-
-#LIBRARY_PATH = $(addprefix $(NA62MCSOURCE)/,$(addsuffix /Persistency/lib:,$(SUBDIRS))) \
-#		$(addsuffix /lib:,$(SUBDIRS))
-#LD_LIBRARY_PATH =$(shell echo $(ROOTSYS)/lib:lib:$(NA62MCSOURCE)/Persistency/lib:$(LIBRARY_PATH) | awk '{print gensub(" ","","g")}')
+EXTRALIBS += -lEve -lGeom -lRGL -lFTGL -lGui -lGed -lTreePlayer -lEG 
 
 .PHONY: clean cleansub cleanbin env $(ALLTARGETDIRS)
 
-#all: PadmeReco PadmeEventDisplay
-all: PadmeReco
+all: PadmeReco PadmeEventDisplay
 
 PadmeReco: PadmeReco.cc makesub
 	@echo "Compiling $< ..."
 	$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
+#	@$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(LDFLAGS)
 
-#PadmeEventDisplay: PadmeEventDisplay.cc makesub
-#	@echo "Compiling $< ..."
+PadmeEventDisplay: PadmeEventDisplay.cc makesub
+	@echo "Compiling $< ..."
+	$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(EXTRALIBS) $(LDFLAGS)
 #	@$(CXX) -o $@ $< $(CXXFLAGS) $(LIBS) $(EXTRALIBS) $(LDFLAGS)
-
 
 try:
 	@echo CPPFLAGS
@@ -65,8 +61,7 @@ $(ALLTARGETDIRS):
 	@$(MAKE) -C $@ $(TARGET)
 
 cleanbin:
-	@rm -f PadmeReco
-#	@rm -f PadmeReco PadmeEventDisplay
+	@rm -f PadmeReco PadmeEventDisplay
 
 cleanall: clean cleanbin
 	@$(MAKE) TARGET=clean makesub
