Fixed core dump problem changing file name matrix in DAQ_readdata; several code cleanups

--- a/PadmeDAQ/Makefile
+++ b/PadmeDAQ/Makefile
@@ -21,6 +21,9 @@ DEPS = $(INC) Makefile
 
 CC	=	gcc
 CFLAGS	=	-fPIC -DLINUX -O2 -g -Wall -I$(IDIR)
+# Use these for better debug
+#CC	=	g++
+#CFLAGS	=	-DLINUX -O0 -g -Wall -I$(IDIR)
 
 #LIBS	=	-lCAENDigitizer -lsqlite3
 LIBS	=	-lCAENDigitizer -L/usr/lib64/mysql -lmysqlclient
