Added -lm to PadmeDAQ Makefile (needed for CentOS)

--- a/PadmeDAQ/Makefile
+++ b/PadmeDAQ/Makefile
@@ -26,7 +26,7 @@ CFLAGS	=	-fPIC -DLINUX -O2 -g -Wall -I$(IDIR)
 #CFLAGS	=	-DLINUX -O0 -g -Wall -I$(IDIR)
 
 #LIBS	=	-lCAENDigitizer -lsqlite3
-LIBS	=	-lCAENDigitizer -L/usr/lib64/mysql -lmysqlclient
+LIBS	=	-lCAENDigitizer -L/usr/lib64/mysql -lmysqlclient -lm
 
 #########################################################################
 
