--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -1,10 +1,14 @@
+[DETECTOR]
+NAME	SAC
+NCHANNELS    25
+READOUT ADC
+
 [ADC]
-NADC  2
-ID    7 8
+NADC  1
+ID    27
 #Format of the next lines: ADC$ID - list of channels
-ADC0 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
-ADC1 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
-ADC2 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 
+#ADC27 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
+ADC27 0 1 2 3 4 10 11 12 13 14 20 21 22 23 24 30 31 32 33 34 40 41 42 43 44 -1 -1 -1 -1 -1 -1 -1
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		1.e
 InputImpedance	50
