--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -1,8 +1,14 @@
+[DETECTOR]
+NAME         Target
+NCHANNELS    32
+READOUT      ADC
+
+
 [ADC]
 NADC  1
-ID    9
+ID    28
 #Format of the next lines: ADC$ID - list of channels
-ADC9 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
+ADC28 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		1.
 InputImpedance	50
