--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -8,11 +8,12 @@ READOUT      ADC
 NADC  1
 ID    28
 #Format of the next lines: ADC$ID - list of channels
-ADC28 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
+#ADC28 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
+ADC28  8 7 9 6 10 5 11 4 12 3 13 2 14 1 15 0 19 12 18 21 17 22 16 23 31 24 30 25 29 26 28 27
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		1.
 InputImpedance	50
-VoltageBin	0.001
+VoltageBin	0.000244
 
 [RECO]
 SignalWindow       		1000
