--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -9,11 +9,14 @@ NADC  1
 ID    28
 #Format of the next lines: ADC$ID - list of channels
 #ADC28 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
-ADC28  8 7 9 6 10 5 11 4 12 3 13 2 14 1 15 0 19 12 18 21 17 22 16 23 31 24 30 25 29 26 28 27
+#ADC28  8 7 9 6 10 5 11 4 12 3 13 2 14 1 15 0 19 12 18 21 17 22 16 23 31 24 30 25 29 26 28 27
+ADC28  16 14 12 10 8 6 4 2 1 3 5 7 9 11 13 15 23 21 19 17 18 20 22 24 26 28 30 32 31 29 27 25
+
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		1.
 InputImpedance	50
 VoltageBin	0.000244
+
 
 [RECO]
 SignalWindow       		1000
@@ -25,3 +28,4 @@ Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
+UseAbsSignals			1
