Fixed minor bugs; new standalone config file with example of new functionalities

--- a/PadmeTrig/standalone.cfg
+++ b/PadmeTrig/standalone.cfg
@@ -1,5 +1,31 @@
+# Test trigger configuration
+
+# Mask 0xc1 = 1100 0001: enable BTF trigger, and both correlated and uncorrelated triggers
+#trigger_mask 0xc1
+
+# Mask 0x81 = 1000 0001: enable BTF and correlated trigger
+trigger_mask 0x81
+
+# Mask 0x02 = 0000 0010: enable cosmics trigger
+#trigger_mask 0x02
+
+# Get all BTF triggers, set autopass every 10 events
+trig0_scale_global 1
+trig0_scale_autopass 10
+
+# Downscale correlated trigger to 1 over 10, always set autopass
+trig7_scale_global 10
+trig7_scale_autopass 1
+
+# Downscale uncorrelated trigger to maximum (~15Hz), always set autopass
+#trig6_scale_global 65535
+#trig6_scale_autopass 1
+
+# Set correlated trigger delay to 900us
+correlated_trigger_delay 900
+
+# Setup to run in standalone mode
 run_number 0
-trigger_mask 0x08
 start_file start_trig
 quit_file stop_trig
 initok_file none
