Include all changes to PadmeReco from daq account

--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -1,12 +1,18 @@
+[DETECTOR]
+NAME         HEPVeto
+NCHANNELS    32
+READOUT      ADC
+
+
 [ADC]
 NADC  1
 ID    13
 #Format of the next lines: ADC$ID - list of channels
 ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
 #Note the following variables should be equavalent for all the ADCs of a given detector
-TimeBin		1.
+TimeBin		0.4
 InputImpedance	50
-VoltageBin	0.000244
+VoltageBin	0.001
 
 [RECO]
 SignalWindow       		150
@@ -15,6 +21,6 @@ SignalPostSamples		150
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
 Multihit			0
-MinAmplitude			20
+MinAmplitude			30
 AmplThrLow			10
 AmplThrHigh			20
