--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -12,7 +12,7 @@ ADC25 35 34 33 32 39 38 37 36 43 42 41 40 47 46 45 44 51 50 49 48 55 54 53 52 59
 ADC26 67 66 65 64 71 70 69 68 75 74 73 72 79 78 77 76 83 82 81 80 87 86 85 84 91 90 89 88 95 94 93 92
 
 #Note the following variables should be equavalent for all the ADCs of a given detector
-TimeBin		1.e
+TimeBin		0.4
 InputImpedance	50
 VoltageBin	0.001
 
