--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -11,12 +11,14 @@ ID    27
 #ADC27 0 1 2 3 4 10 11 12 13 14 20 21 22 23 24 30 31 32 33 34 40 41 42 43 44 -1 -1 -1 -1 -1 -1 -1
 ADC27 0 10 20 30 40 1 11 21 31 41 2 12 22 32 42 3 13 23 33 43 4 14 24 34 44 -1 -1 -1 -1 -1 -1 -1
 #Note the following variables should be equavalent for all the ADCs of a given detector
-TimeBin		1.e
+#TimeBin		1.e
+TimeBin		0.4
 InputImpedance	50
 VoltageBin	0.001
 
 [RECO]
-SignalWindow       		150
+# signal window is deifined per singol photon in terms of ±2ns M. Raggi 09/11/2018  
+SignalWindow       		2
 SignalPreSamples		30
 SignalPostSamples		120
 PedestalOffset     		50
