--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -8,7 +8,8 @@ NADC  1
 ID    28
 
 #Format of the next lines: ADC$ID - list of channels
-ADC28  16 14 12 10 8 6 4 2 1 3 5 7 9 11 13 15 23 21 19 17 18 20 22 24 26 28 30 32 31 29 27 25 
+ADC28  16 14 12 10 8 6 4 2 1 3 5 7 9 11 13 15 23 21 19 17 18 20 22 24 26 28 30 32 31 29 27 25
+#ADC28  16 14 12 10 8 6 4 2 1 3 5 7 9 11 13 15 25 27 29 31 32 30 28 26 24 22 20 18 17 19 21 23
 
 
 #Note the following variables should be equavalent for all the ADCs of a given detector
@@ -20,7 +21,7 @@ VoltageBin	0.000244
 [RECO]
 SignalWindow       		1000
 SignalPreSamples		200
-SignalPostSamples		1024
+SignalPostSamples		700
 PedestalOffset     		0
 NumberOfSamplesPedestal		200
 Multihit			0
