Generic Clusterization for all linear detectors; expanded configuration

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -48,3 +48,16 @@ Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
+
+
+[RECOCLUSTER]
+ClusterDeltaTimeMax            1.
+ClusterDeltaCellMax            2
+ClusterEnergyThresholdForHit   2.
+ClusterEnergyThresholdForSeed  3.
+ClusterTLowForHit              -200.
+ClusterTHighForHit              250.
+
+[Output]
+Hits            1
+Clusters        1
