--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -26,3 +26,17 @@ Multihit			0
 MinAmplitude			40
 AmplThrLow			10
 AmplThrHigh			20
+
+
+[RECOCLUSTER]
+ClusterDeltaTimeMax            1.
+ClusterDeltaCellMax            2
+ClusterEnergyThresholdForHit   2.
+ClusterEnergyThresholdForSeed  3.
+ClusterTLowForHit              -100.
+ClusterTHighForHit              220.
+
+[Output]
+Hits            1
+Clusters        1
+
