--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -24,3 +24,15 @@ Multihit			0
 MinAmplitude			30
 AmplThrLow			10
 AmplThrHigh			20
+
+[RECOCLUSTER]
+ClusterDeltaTimeMax            1.
+ClusterDeltaCellMax            2
+ClusterEnergyThresholdForHit   2.
+ClusterEnergyThresholdForSeed  3.
+ClusterTLowForHit              -100.
+ClusterTHighForHit              180.
+
+[Output]
+Hits            1
+Clusters        1
