--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -35,3 +35,14 @@ AmplThrHigh			20
 
 
 
+[RECOCLUSTER]
+ClusterDeltaTimeMax            1.
+ClusterDeltaCellMax            2
+ClusterEnergyThresholdForHit   2.
+ClusterEnergyThresholdForSeed  3.
+ClusterTLowForHit              -100.
+ClusterTHighForHit              180.
+
+[Output]
+Hits            1
+Clusters        1
