--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -31,4 +31,8 @@ AmplThrHigh			10000
 UseAbsSignals			1
 CCD                             20
 
-
+[Output]
+Hits            1
+Clusters        0
+Beam            1
+SignalFitParams 0
