--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -27,3 +27,15 @@ Multihit			0
 MinAmplitude			40
 AmplThrLow			10
 AmplThrHigh			20
+
+[RECOCLUSTER]
+ClusterDeltaTimeMax            1.
+ClusterDeltaCellMax            2
+ClusterEnergyThresholdForHit   2.
+ClusterEnergyThresholdForSeed  3.
+ClusterTLowForHit              -100.
+ClusterTHighForHit              200.
+
+[Output]
+Hits            1
+Clusters        1
