Changed timepix width default to 3.2us in trigger; added rt library to Level1 compilation for SL6

--- a/PadmeTrig/standalone.cfg
+++ b/PadmeTrig/standalone.cfg
@@ -24,6 +24,10 @@ trig7_scale_autopass 1
 # Set correlated trigger delay to 900us
 correlated_trigger_delay 900
 
+# Timepix3 setup (show default values)
+#timepix_shutter_delay 0x02
+#timepix_shutter_width 0xff
+
 # Setup to run in standalone mode
 run_number 0
 start_file start_trig
