--- a/PadmeTrig/Makefile
+++ b/PadmeTrig/Makefile
@@ -25,7 +25,7 @@ CFLAGS	=	-fPIC -DLINUX -O2 -g -Wall -I$(IDIR)
 #CC	=	g++
 #CFLAGS	=	-DLINUX -O0 -g -Wall -I$(IDIR)
 
-LIBS	=	-L/usr/lib64/mysql -lmysqlclient -lm
+LIBS	=	-L/usr/lib64/mysql -lmysqlclient -lm -lrt
 
 #########################################################################
 
