more configuration and clusterization fixes

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -57,6 +57,8 @@ ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
 ClusterTLowForHit              -200.
 ClusterTHighForHit              250.
+#ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
+ClusterizationAlgo    2
 
 [Output]
 Hits            1
