--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -35,6 +35,8 @@ ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
 ClusterTLowForHit              -100.
 ClusterTHighForHit              200.
+#ClusterizationAlgo    1[Simple/SAC] 2[Simple/Base] 
+ClusterizationAlgo    2
 
 [Output]
 Hits            1
