Target & base Calibration Svc

--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -36,3 +36,36 @@ Hits            1
 Clusters        0
 Beam            1
 SignalFitParams 0
+
+[TimeCalibration]
+Common_t0  0.
+t0_01  0.
+t0_02  0.
+t0_03  0.
+t0_04  0.
+t0_05  0.
+t0_06  0.
+t0_07  0.
+t0_08  0.
+t0_09  0.
+t0_10  0.
+t0_11  0.
+t0_12  0.
+t0_13  0.
+t0_14  0.
+t0_15  0.
+t0_16  0.
+t0_17  0.
+t0_18  0.
+t0_19  0.
+t0_20  0.
+
+[EnergyCalibration]
+Common_EnergyScale 1.
+# average amplifier gain
+AverageGain     1300.0
+# HV sign allow to revert the charge sign for the correct (X or Y) view and have always a positive beam profile
+HVsign    	   -1
+# channel gain relative to average gain
+ES_01  1.
+ES_02  1.
