Fixed ECal clusters timing, added ECAl debug root files ECalAn.root ,added running modes, improved SAC clusters, introduced digitizers for Veto

--- a/PadmeReco/config/PadmeReconstruction.cfg
+++ b/PadmeReco/config/PadmeReconstruction.cfg
@@ -1,18 +1,28 @@
 [RECOALGORITHMS]
 ECal    1
-SAC     1
-PVeto	1
-EVeto   1
-HEPVeto 1
+SAC     0
+PVeto	0
+EVeto   0
+HEPVeto 0
 TPix    0
-Target  1
+Target  0
 
 [RECOOutput]
 ECal    1
-SAC     1
-PVeto	1
-EVeto   1
-HEPVeto 1
+SAC     0
+PVeto	0
+EVeto   0
+HEPVeto 0
 TPix    0
-Target  1
+Target  0
+
+[RUNNINGMODE]
+
+Pedestal    0
+Reconstruct 1
+Monitor     0
+Cosmics     0
+Debug       1
+
+
 
