Fix config for Pedestal run and extenf configuration for ECal Pedestal use

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -48,6 +48,8 @@ Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
+#### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
+PedestalMode                    0 
 
 
 ### for data - on l0padme3
