minor fix to cfg files

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -52,10 +52,10 @@ AmplThrHigh			20
 
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            1.
-ClusterDeltaCellMax            2
-ClusterEnergyThresholdForHit   0.
-ClusterEnergyThresholdForSeed  10.
+ClusterDeltaTimeMax            10.
+ClusterDeltaCellMax            3
+ClusterEnergyThresholdForHit   1.5
+ClusterEnergyThresholdForSeed  20.
 ClusterTLowForHit              -200.
 ClusterTHighForHit              250.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
