Added ECal Calibration class. Added oversampling4 in time determination

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -48,7 +48,7 @@ Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
-
+UseOverSample                   1.
 
 ### for data - on l0padme3
 [RECOCLUSTER]
@@ -65,3 +65,7 @@ ClusterizationAlgo    1
 [Output]
 Hits            1
 Clusters        1
+
+[EnergyCalibration]
+UseCalibration 0.
+AveragepCMeV   15.0
