multihit reconstruction for all veto detectors; small fix in trigger time; TSpectrum use compliant with root5/6

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -17,15 +17,20 @@ InputImpedance	50
 VoltageBin	0.001
 
 [RECO]
-SignalWindow       		150
+SignalWindow       		151
 SignalPreSamples		30
 SignalPostSamples		120
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
-Multihit			0
+#Multihit [0- SingleHit, 1- Multihit with TSpectrum]
+Multihit			1
+#MinAmplitude used ony in single hit mode 
 MinAmplitude			20
-AmplThrLow			10
+#if Multihit==0, AmplThrLow and AmplThrHigh must be different 
+AmplThrLow			20
 AmplThrHigh			20
+
+
 
 [TimeCalibration]
 0   7.3
@@ -36,12 +41,13 @@ AmplThrHigh			20
 
 
 [RECOCLUSTER]
-ClusterDeltaTimeMax            1.
+ClusterDeltaTimeMax            5.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
-ClusterTLowForHit              -100.
-ClusterTHighForHit              180.
+ClusterTLowForHit              -500.
+ClusterTHighForHit              500.
+#ClusterTHighForHit              300.
 
 [Output]
 Hits            1
