--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -54,12 +54,12 @@ PedestalMode                    0
 
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            1.
-ClusterDeltaCellMax            2
-ClusterEnergyThresholdForHit   0.
-ClusterEnergyThresholdForSeed  10.
-ClusterTLowForHit              -200.
-ClusterTHighForHit              250.
+ClusterDeltaTimeMax            6.
+ClusterDeltaCellMax            3
+ClusterEnergyThresholdForHit   5.
+ClusterEnergyThresholdForSeed  15.
+ClusterTLowForHit              -500.
+ClusterTHighForHit              500.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
 ClusterizationAlgo    1
 
@@ -67,3 +67,22 @@ ClusterizationAlgo    1
 [Output]
 Hits            1
 Clusters        1
+
+
+[GEOMETRY]
+ComputeFromPrimaryNumbers 1
+LocalOrigineX    0.
+LocalOrigineY    0.
+LocalOrigineZ    2300. 
+LocalAngleXPadmeFrame 0.
+LocalAngleYPadmeFrame 0.
+LocalAngleZPadmeFrame 0.
+Step1LocalX 21.
+Step1LocalY 21.
+Step1LocalZ 0.
+ChId@LocalX0 1414
+ChId@LocalY0 1414
+ChId@LocalZ0 1414
+ChId@LocalX0Offset 0.
+ChId@LocalY0Offset 0.
+ChId@LocalZ0Offset 0.
