--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -22,19 +22,25 @@ SignalPreSamples		30
 SignalPostSamples		120
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
-Multihit			0
-MinAmplitude			40
-AmplThrLow			10
-AmplThrHigh			20
+#Multihit [0- SingleHit, 1- Multihit with TSpectrum]
+Multihit                        1
+#MinAmplitude used ony in single hit mode
+MinAmplitude                    40
+#if Multihit==0, AmplThrLow and AmplThrHigh must be different
+AmplThrLow                      20
+AmplThrHigh                     20
+
 
 
 [RECOCLUSTER]
-ClusterDeltaTimeMax            1.
+ClusterDeltaTimeMax            5.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
-ClusterTLowForHit              -100.
-ClusterTHighForHit              220.
+#ClusterTLowForHit              -100.
+#ClusterTHighForHit              220.
+ClusterTLowForHit              -500.
+ClusterTHighForHit              500.
 
 [Output]
 Hits            1
