change to teh config of Veto Detectors

--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -22,13 +22,13 @@ PedestalOffset     		50
 NumberOfSamplesPedestal		50
 #Multihit			0
 #MinAmplitude used ony in single hit mode 
-#MinAmplitude			30
+MinAmplitude			20
 #if Multihit==0, AmplThrLow and AmplThrHigh must be different 
 #AmplThrLow			10
 #AmplThrHigh			20
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
 Multihit			1	
-AmplThrLow			20
+AmplThrLow			10
 AmplThrHigh			20
 
 
