SACCalibration, reading from .txt file

--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -17,7 +17,7 @@ InputImpedance	50
 VoltageBin	0.001
 
 [RECO]
-# signal window is deifined per singol photon in terms of ±2ns M. Raggi 09/11/2018  
+# signal window is deifined per singol photon in terms of Â±2ns M. Raggi 09/11/2018  
 SignalWindow       		2
 SignalPreSamples		30
 SignalPostSamples		120
@@ -41,3 +41,13 @@ ClusterizationAlgo    2
 [Output]
 Hits            1
 Clusters        1
+
+[EnergyCalibration]
+Common_EnergyScale 1.
+CalibrationFile    0
+
+
+
+
+
+
