Ecal calibration, timing oversample added, few bug fix

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -1,3 +1,4 @@
+
 [DETECTOR]
 NAME    ECal
 READOUT ADC
@@ -48,16 +49,16 @@ Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
-UseOverSample                   1.
+UseOverSample                   0.
 
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            10.
+ClusterDeltaTimeMax            500.
 ClusterDeltaCellMax            3
-ClusterEnergyThresholdForHit   1.5
+ClusterEnergyThresholdForHit   1.
 ClusterEnergyThresholdForSeed  20.
-ClusterTLowForHit              -200.
-ClusterTHighForHit              250.
+ClusterTLowForHit              -500.
+ClusterTHighForHit              500.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
 ClusterizationAlgo    1
 
@@ -67,5 +68,5 @@ Hits            1
 Clusters        1
 
 [EnergyCalibration]
-UseCalibration 0.
+UseCalibration 1.
 AveragepCMeV   15.0
