Added time offset calibration structure

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -70,3 +70,7 @@ Clusters        1
 [EnergyCalibration]
 UseCalibration 1.
 AveragepCMeV   15.0
+
+[TimeAlignment]
+UseTimeAlignment  0.
+AverageTimeOff    0.0
