--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -8,7 +8,9 @@ READOUT      ADC
 NADC  1
 ID    13
 #Format of the next lines: ADC$ID - list of channels
-ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
+###ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
+# hepveto remapped based on hit profiles - F. Oliva May 2019 
+ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 19 18 17 16 23 22 21 20 27 26 25 24 31 30 29 28 
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		0.4
 InputImpedance	50
